Add diamond-infused Rose Gold items and refactor iron-infused naming
Introduces diamond-infused Rose Gold items, models, textures, and recipes. Refactors iron-infused Rose Gold item names and assets for consistency, updates crafting recipes and language entries, and removes legacy naming and files. Also updates item tags and model references to support new items and correct asset usage.

--- a/src/main/resources/data/rose_gold/recipe/rose_gold_apple.json
+++ b/src/main/resources/data/rose_gold/recipe/rose_gold_apple.json
@@ -6,7 +6,7 @@
     "rrr"
   ],
   "key": {
-    "r": "rose_gold:rose_gold_ingot",
+    "r": "rose_gold:rose_gold_iron_ingot",
     "G": "minecraft:golden_apple"
   },
   "result": {
